--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -33,10 +33,10 @@
 	{January 2024 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Developed major releases of the extract logs application used by \textbf{over 100 engineers}}
-			\item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors on hardware devices}
-      \item {Built database for audio sentiment analysis by a combination of scripting, parsing, and web scraping from various sources}
-			\item {Extensive use of \textbf{Python} and \textbf{JupyterLab} for automation and general parsing of complex log files}
+			\item {Developed releases of the Extract Logs application, an internal tool used by \textbf{100+ engineers} to aggregate information and locate errors within log archives, eliminating hours of manual labour on every run}
+			\item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors on hardware devices, increasing debug efficiency by \textbf{>30\%} for common errors}
+			\item {Built database for audio sentiment analysis by scripting, parsing, and web scraping from various sources}
+			\item {Used \textbf{Python} and \textbf{JupyterLab} extensively for general automation and parsing of complex log archives}
 			% \item Used \textbf{Scrapy} python framework for webcrawling data
 		\end{cvitems}
 	}
@@ -48,13 +48,16 @@
 	{May 2023 - August 2023} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item {Contributed to major tool - auto-callout system (ACMP) for \textbf{hundreds} of field technicians. This tool increases reliability of TELUS infrastructure by reducing response times to tower outages \textbf{from hours down to seconds}.}
-			\item {Developed POC tool for use across the TELUS RCOE team which was demo-ed to VP}
-			\item[] {\textbf{Technical Skills:} GKE, Cloud Pub/Sub, CI\&CD, Java \textbf{Spring Boot}, Jinja2, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
+			\item {Contributed to major tool, auto-callout system (ACMP) for \textbf{hundreds} of field technicians. This system increases reliability of TELUS infrastructure by drastically reducing response times to service outages \textbf{from hours down to seconds}}
+			\item {Built, tested, and deployed \textbf{production} Docker images of ACMP service to production \textbf{Docker swarms}}
+			\item {Developed POC \textbf{Google Chat} service for internal database lookup without compromising security by adopting the \textbf{publisher-subscriber model} for secure communication between networks}
+			\item {Tool streamlines responsibility lookup for employees, increasing lookup effiency by \textbf{40\%}}
+			\item {Used \textbf{serverless} architecture and \textbf{Spring Boot} for chat service, reducing server cost by \textbf{20 times} compared to other internal services while maintaining \textbf{sub-second} response times}
+			% \item[] {\textbf{Technical Skills:} GKE, Cloud Pub/Sub, CI\&CD, Java \textbf{Spring Boot}, Jinja2, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
 		\end{cvitems}
 	}
 
-  	%---------------------------------------------------------
+	%---------------------------------------------------------
 	% \cventry
 	%   {Assistant Teacher Supervisor} % Job title
 	%   {Kanata South Kumon} % Organisation
