--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -44,84 +44,76 @@
 
 
 	%---------------------------------------------------------
-  \cventry
-  {\textbf{Open Source} | Keiyoushi/extensions} % Job title
-	{\underline{\href{https://github.com/keiyoushi/extensions-source}{keiyoushi/extensions-source | \ExternalLink}}} % Organisation
+	\cventry
+	{\textbf{Open Source} | Android Studio, \textbf{Kotlin}, Gradle, \textbf{Mobile Development}, Git}
+	{\underline{\href{https://github.com/keiyoushi/extensions-source}{Keiyoushi Extensions | \ExternalLink}}}
 	{Ottawa, ON} % Location
 	{August 2024 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {A suite of extensions part of the Tachiyomi/Mihon manga reader system -- used by tens of thousands of users and myself.}
-      \item {Developed, built, and maintained numerous extensions for tens of thousands of users :)}
-      \item[] {\textbf{Technical Skills:} Android Studio, \textbf{Kotlin}, Gradle, \textbf{Mobile Development}}
+			\item {Contributed to open souce suite of extensions as part of the Tachiyomi/Mihon manga reader system}
+			\item {Developed, built, and maintained numerous extensions for tens of thousands of users}
 		\end{cvitems}
 	}
 
-  %---------------------------------------------------------
+	%---------------------------------------------------------
 	\cventry
-	{Arbitrage | High Volume Trading}
+	{High Volume Trading | Docker Networking, WebSockets, IBKR Gateway, RxJS}
 	{\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
 	{April. 2024 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-			\item {High frequency trader using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
-			\item {Bot written in \textbf{Typescript} for managing trades}
-			\item {\textbf{Technical Skills:} Docker Networking, WebSockets, IBKR Gateway, Typescript, Algorithms, HFT.}
+			\item {High frequency trader written in \textbf{Typescript} and using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
+			\item {Utilized \textbf{RxJS} for real-time price data stream processing}
 		\end{cvitems}
 	}
 
 	%---------------------------------------------------------
 	\cventry
-	{Stable Diffusion XL LORA Adapter | \textbf{Image Generation}}
+	{XL LORA Adapter | PyTorch, LORA, Nextjs, Cloudflare, HuggingFace, Transformers}
 	{\underline{\href{https://lefan.ca/projects/stable-diffusion}{Stable Diffusion | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
 	{January 2024 - May 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-			\item {\textbf{LORA adapter} trained on \textbf{AWS} G4DN GPU instance for generating taylor swift images using SDXL model}
-			\item {Hosted on \textbf{Hugging Face} Serverless API platform}
-			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, \textbf{Stable Diffusion} and \textbf{Next.js}}
-			\item {\textbf{Technical Skills:} Cloud Computing, ML, LORA, Nextjs, Cloudflare, SSL}
-			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
+			\item {Generates high quality images of Taylor Swift based on text prompt}
+			\item {Tuned custom \textbf{LORA adapter} for SDXL model on \textbf{AWS} G4DN GPU instance by leveraging \textbf{HuggingFace} Accelerate}
+			\item {Hosted on HuggingFace Serverless Inference, eliminating waste on idling resources}
 		\end{cvitems}
 	}
 
 	%---------------------------------------------------------
 	\cventry
-	{Hack The North 2021 | \textbf{Best Use of Google Cloud} | \textbf{Best Entrepreneurship Hack}} % Organisation
-	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
-	{Sept. 2021 - Sept. 2021} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {An AI-powered, multi-target tracking system that identifies high traffic areas in public spaces. The project empowers small business owners by bringing AI analytics to small business owners.}
-			\item {\textbf{YOLOv5} model was loaded onto \textbf{PyTorch} to recognize and annotate individuals}
-			\item {Built using \textbf{Google Cloud}, matrix perspective transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}, and \textbf{YOLOv5}}
-			% \item {\textbf{Technical Skills:} Python, PyTorch, OpenCV, Google Cloud, AWS, React.js.}
-			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
-		\end{cvitems}
-	}
-
-
-	%---------------------------------------------------------
-	\cventry
-	{AWS Powered AI Interview Platform}
+	{AWS Powered AI Interview Platform | \textbf{Nginx}, \textbf{Docker}, Lambda, Statemachine, SAM}
 	{\underline{\href{https://github.com/Interqu}{Interqu Interview Platform | \ExternalLink}}} % Project
 	{Waterloo, ON} % Location
 	{June 2023 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-			\item {\textbf{AWS Statemachine} used to manage various post-processing states using Lambda functions}
-			\item {\textbf{Angular} front-end, back-end processing handled by: AWS \textbf{SAM} - (Statemachine, Lambda, API gateway, graphql), PyTorch, ChatGPT}
-			% \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
-			\item {Built using \textbf{Nginx}, \textbf{Docker}, \textbf{AWS - (Lambda, Statemachine, Stepfunctions, SAM)}, \textbf{Pytorch}, \textbf{ChatGPT}}
+			\item {Adopted AWS Serverless Application Framework to leverage cloud computing at low costs in conjunction with \textbf{AWS Statemachine} to manage various processing states using \textbf{Lambda} functions}
+			\item {\textbf{Angular} front-end, back-end processing and api management handled by: AWS \textbf{SAM} (Statemachine, Lambda, API Gateway, GraphQL), PyTorch, ChatGPT}
+			% TODO: elaborate on pytorch.
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
 		\end{cvitems}
 	}
 
-	
+	%---------------------------------------------------------
+	\cventry
+	{Hack The North 2021 | \textbf{Google Cloud}, Transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}}
+	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
+	{Ottawa, ON} % Location
+	{Sept. 2021 - Sept. 2021} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of project
+			\item {An AI-powered, multi-target tracking system that identifies high traffic areas in public spaces}
+			\item {Empowers small business owners by bringing AI analytics to small business owners}
+			\item {\textbf{YOLOv5} model was loaded onto \textbf{PyTorch} to recognize and annotate individuals}
+		\end{cvitems}
+	}
+
+
 	% \cventry
 	% {Custom FPV Drone}
 	% {\underline{\href{https://lefan.ca/projects/drone}{Autonomous Drone | \ExternalLink}}} % Project
