fix grammar error

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -34,7 +34,7 @@
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
 			\item {Developed releases of the Extract Logs application, an internal tool used by \textbf{100+ engineers} to aggregate information and locate errors within log archives, eliminating hours of manual labour on every run}
-			\item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors on hardware devices, increasing debug efficiency by \textbf{>30\%} for common errors}
+			\item {Created \textbf{Splunk} search queries for well known signatures of known and recognizable errors on hardware devices, increasing debug efficiency by \textbf{>30\%} for common errors}
 			\item {Built database for audio sentiment analysis by scripting, parsing, and web scraping from various sources}
 			\item {Used \textbf{Python} and \textbf{JupyterLab} extensively for general automation and parsing of complex log archives}
 			% \item Used \textbf{Scrapy} python framework for webcrawling data
