temporarily remove some points from experiences & projects

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -52,7 +52,7 @@
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
 			\item {Contributed to open souce suite of extensions as part of the Tachiyomi/Mihon manga reader system}
-			\item {Developed, built, and maintained numerous extensions for tens of thousands of users}
+      \item {Developed, built, and maintained numerous extensions for \textbf{tens of thousands of users}}
 		\end{cvitems}
 	}
 
