remove arbitrage project until more progress

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -57,17 +57,17 @@
 	}
 
 	%---------------------------------------------------------
-	\cventry
-	{High Volume Trading | Docker Networking, WebSockets, IBKR Gateway, RxJS}
-	{\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
-	{April. 2024 - Now} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {High frequency trader written in \textbf{Typescript} and using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
-			\item {Utilized \textbf{RxJS} for real-time price data stream processing}
-		\end{cvitems}
-	}
+	% \cventry
+	% {High Volume Trading | Docker Networking, WebSockets, IBKR Gateway, RxJS}
+	% {\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
+	% {Ottawa, ON} % Location
+	% {April. 2024 - Now} % Date(s)
+	% {
+	% 	\begin{cvitems} % Description(s) of project
+	% 		\item {High frequency trader written in \textbf{Typescript} and using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
+	% 		\item {Utilized \textbf{RxJS} for real-time price data stream processing}
+	% 	\end{cvitems}
+	% }
 
 	%---------------------------------------------------------
 	\cventry
