--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-\extrainfo{\textbf{Computer Engineer} - \textbf{University of Waterloo}}
+% \extrainfo{\textbf{Computer Engineer} - \textbf{University of Waterloo}}
 
 % \quote{``Simplicity is deceptively complicated."}
 
