remove location from projects

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -47,7 +47,7 @@
 	\cventry
 	{\textbf{Open Source} | Android Studio, \textbf{Kotlin}, Gradle, \textbf{Mobile Development}, Git}
 	{\underline{\href{https://github.com/keiyoushi/extensions-source}{Keiyoushi Extensions | \ExternalLink}}}
-	{Ottawa, ON} % Location
+	{} % Location
 	{August 2024 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
@@ -73,7 +73,7 @@
 	\cventry
 	{XL LORA Adapter | PyTorch, LORA, Nextjs, Cloudflare, HuggingFace, Transformers}
 	{\underline{\href{https://lefan.ca/projects/stable-diffusion}{Stable Diffusion | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
+	{} % Location
 	{January 2024 - May 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
@@ -87,7 +87,7 @@
 	\cventry
 	{AWS Powered AI Interview Platform | \textbf{Nginx}, \textbf{Docker}, Lambda, Statemachine, SAM}
 	{\underline{\href{https://github.com/Interqu}{Interqu Interview Platform | \ExternalLink}}} % Project
-	{Waterloo, ON} % Location
+	{} % Location
 	{June 2023 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
@@ -103,7 +103,7 @@
 	\cventry
 	{Hack The North 2021 | \textbf{Google Cloud}, Transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}}
 	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
+	{} % Location
 	{Sept. 2021 - Sept. 2021} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
