cv semi-rewrite
made lots of things more consistent and fleshed out open source
development experience

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -51,8 +51,9 @@
 	{August 2024 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item {Contributed to open souce suite of extensions as part of the Tachiyomi/Mihon manga reader system}
-      \item {Developed, built, and maintained numerous extensions for \textbf{tens of thousands of users}}
+      \item {Contributed to \textbf{open-souce} suite of webscraping extensions as part of the \textbf{Tachiyomi/Mihon} manga reader system}
+      \item {Utilized \textbf{Kotlin} to develop and maintain various extensions for \textbf{tens of thousands of users}, ensuring focusing on enhancing user experience and quality features}
+      \item {Worked in a collaborative environment, addressing issues and feature requests from the community, and following an \textbf{open-source development model}}
 		\end{cvitems}
 	}
 
@@ -91,9 +92,9 @@
 	{June 2023 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-			\item {Adopted AWS Serverless Application Framework to leverage cloud computing at low costs in conjunction with \textbf{AWS Statemachine} to manage various processing states using \textbf{Lambda} functions}
-			\item {\textbf{Angular} front-end, back-end processing and api management handled by: AWS \textbf{SAM} (Statemachine, Lambda, API Gateway, GraphQL), PyTorch, ChatGPT}
+			\item {Utilizes AI to analyze speech, expression, and general flow of a mock interview to provide valuable feedback for students}
+			\item {Adopted AWS Serverless Application Framework (SAM) to leverage cloud computing at low costs in conjunction with \textbf{AWS Statemachine} to manage various processing states}
+			\item {Created \textbf{Angular} front-end and AWS back-end processing and api management handled by: AWS \textbf{SAM} (Statemachine, Lambda, API Gateway, GraphQL), PyTorch, ChatGPT}
 			% TODO: elaborate on pytorch.
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
 		\end{cvitems}
@@ -107,9 +108,9 @@
 	{Sept. 2021 - Sept. 2021} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-			\item {An AI-powered, multi-target tracking system that identifies high traffic areas in public spaces}
+    \item {Identifies high traffic areas in public spaces to ensure safe distancing during pandemic by leveraging \textbf{AI} and \textbf{perspective transformations}}
 			\item {Empowers small business owners by bringing AI analytics to small business owners}
-			\item {\textbf{YOLOv5} model was loaded onto \textbf{PyTorch} to recognize and annotate individuals}
+			\item {Loaded \textbf{YOLOv5} model onto \textbf{PyTorch} for recognition and annotation of individuals on ffmpeg stream in realtime}
 		\end{cvitems}
 	}
 
