--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,11 +12,11 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Python, C/C++, Java, Kotlin, HTML/CSS, JavaScript, VHDL, Matlab} % Skills
+    {Python, C/C++, Java, Kotlin, HTML/CSS, JavaScript, VHDL, Matlab, LaTeX} % Skills
 
   \cvskill
     {Technologies} % Category
-    {PyTorch, MongoDB, Postgre, Docker Swarm, AWS (Lambda, API Gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Scrapy}
+    {PyTorch, MongoDB, Postgre, Docker Swarm, AWS (Lambda, API Gateway, EC2), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Scrapy}
 
 %---------------------------------------------------------
   % \cvskill
