--- a/resume.tex
+++ b/resume.tex
@@ -88,6 +88,7 @@
 % \input{cv/summary.tex}
 % \vspace{-1em}
 \input{cv/education.tex}
+\vspace{-1.5em}
 \input{cv/experience.tex}
 \input{cv/projects.tex}
 \input{cv/skills.tex}
