remove courses temporarily for space
also because external apps i apply with transcript

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -16,10 +16,10 @@
 	{Waterloo, Canada} % Location
 	{Sept. 2022 - Dec. 2026} % Date(s)
 	{
-		\begin{cvitems} % Description(s) bullet points
-			% \item {Part of various clubs - Waterloo Computer Science Club, WARG}
-			\item {\textbf{Current Courses:} Quantum Physics, Communication Systems, Digital Hardware Systems, Real-Time Operating Systems, Analog Control Systems}
-		\end{cvitems}
+		% \begin{cvitems} % Description(s) bullet points
+		% 	% \item {Part of various clubs - Waterloo Computer Science Club, WARG}
+		% 	\item {\textbf{Current Courses:} Quantum Physics, Communication Systems, Digital Hardware Systems, Real-Time Operating Systems, Analog Control Systems}
+		% \end{cvitems}
 	}
 
 	% \cventry
