--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -93,7 +93,7 @@
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {Utilizes AI to analyze speech, expression, and general flow of a mock interview to provide valuable feedback for students}
-			\item {Adopted AWS Serverless Application Framework (SAM) to leverage cloud computing at low costs in conjunction with \textbf{AWS Statemachine} to manage various processing states}
+      \item {Adopted AWS \textbf{Serverless Application Framework} (SAM) to leverage cloud computing at low costs in conjunction with \textbf{AWS Statemachine} to manage various processing states}
 			\item {Created \textbf{Angular} front-end and AWS back-end processing and api management handled by: AWS \textbf{SAM} (Statemachine, Lambda, API Gateway, GraphQL), PyTorch, ChatGPT}
 			% TODO: elaborate on pytorch.
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
