format & tweak to increase spacing between points

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -48,7 +48,7 @@
 	{May 2023 - August 2023} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item {Contributed to major tool, auto-callout system (ACMP), used by \textbf{hundreds} of field technicians. Increasing reliability of TELUS infrastructure by drastically reducing response times to service outages \textbf{from hours down to seconds} by completely automating the dispatching of field technicians}
+			\item {Contributed to major system, auto-callout (ACMP), used by \textbf{hundreds} of field technicians. This system fully automates the dispatching of technicians in response to outages, reducing response times from \textbf{hours to seconds}}
 			\item {Built, tested, and deployed \textbf{production} Docker images of ACMP service to production \textbf{Docker swarms}}
 			\item {Developed POC \textbf{Google Chat} service for internal database lookup without compromising security by adopting the \textbf{publisher-subscriber model} for secure communication between networks}
 			\item {Used \textbf{serverless} architecture and \textbf{Spring Boot} for chat service, reducing server cost by \textbf{20 times} compared to other internal services while maintaining \textbf{sub-second} response times}
