--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -108,9 +108,9 @@
 	{Sept. 2021 - Sept. 2021} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
-    \item {Identifies high traffic areas in public spaces to ensure safe distancing during pandemic by leveraging \textbf{AI} and \textbf{perspective transformations}}
-			\item {Empowers small business owners by bringing AI analytics to small business owners}
-			\item {Loaded \textbf{YOLOv5} model onto \textbf{PyTorch} for recognition and annotation of individuals on ffmpeg stream in realtime}
+    \item {Identifies high traffic areas in public spaces to ensure safe distancing during pandemic by leveraging \textbf{AI}}
+			% \item {Empowers small business owners by bringing AI analytics to small business owners}
+			\item {Loaded \textbf{YOLOv5} model onto \textbf{PyTorch} for recognition and annotation of individuals on ffmpeg stream in real-time}
 		\end{cvitems}
 	}
 
